// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management list item component hides comment count 1`] = `
<router-link-stub
  class="card cursor-pointer text-plain js-design-list-item design-list-item"
  to="[object Object]"
>
  <div
    class="card-body p-0 d-flex align-items-center overflow-hidden"
  >
    <img
      alt="test"
      class="block ml-auto mr-auto mw-100 mh-100 design-img"
      src="http://via.placeholder.com/300"
    />
  </div>
   
  <div
    class="card-footer d-flex w-100"
  >
    <div
      class="d-flex flex-column str-truncated-100"
    >
      <span
        class="bold str-truncated-100"
      >
        test
      </span>
       
      <span
        class="str-truncated-100"
      >
        
        Updated 
        <timeago-stub
          cssclass=""
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <!---->
  </div>
</router-link-stub>
`;

exports[`Design management list item component renders item with multiple comments 1`] = `
<router-link-stub
  class="card cursor-pointer text-plain js-design-list-item design-list-item"
  to="[object Object]"
>
  <div
    class="card-body p-0 d-flex align-items-center overflow-hidden"
  >
    <img
      alt="test"
      class="block ml-auto mr-auto mw-100 mh-100 design-img"
      src="http://via.placeholder.com/300"
    />
  </div>
   
  <div
    class="card-footer d-flex w-100"
  >
    <div
      class="d-flex flex-column str-truncated-100"
    >
      <span
        class="bold str-truncated-100"
      >
        test
      </span>
       
      <span
        class="str-truncated-100"
      >
        
        Updated 
        <timeago-stub
          cssclass=""
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="ml-auto d-flex align-items-center text-secondary"
    >
      <icon-stub
        class="ml-1"
        cssclasses=""
        name="comments"
        size="16"
      />
       
      <span
        aria-label="2 comments"
        class="ml-1"
      >
        
        2
      
      </span>
    </div>
  </div>
</router-link-stub>
`;

exports[`Design management list item component renders item with single comment 1`] = `
<router-link-stub
  class="card cursor-pointer text-plain js-design-list-item design-list-item"
  to="[object Object]"
>
  <div
    class="card-body p-0 d-flex align-items-center overflow-hidden"
  >
    <img
      alt="test"
      class="block ml-auto mr-auto mw-100 mh-100 design-img"
      src="http://via.placeholder.com/300"
    />
  </div>
   
  <div
    class="card-footer d-flex w-100"
  >
    <div
      class="d-flex flex-column str-truncated-100"
    >
      <span
        class="bold str-truncated-100"
      >
        test
      </span>
       
      <span
        class="str-truncated-100"
      >
        
        Updated 
        <timeago-stub
          cssclass=""
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="ml-auto d-flex align-items-center text-secondary"
    >
      <icon-stub
        class="ml-1"
        cssclasses=""
        name="comments"
        size="16"
      />
       
      <span
        aria-label="1 comment"
        class="ml-1"
      >
        
        1
      
      </span>
    </div>
  </div>
</router-link-stub>
`;
